- Brings JClouds Chef up to speed with latest JClouds 1.0-SNAPSHOT (approximately 1.0-beta-9b) - Unit tests all pass - Some broken live tests, will fix soon