@@ -20,33 +20,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>jclouds-chef-project</artifactId>
+  <parent>
+      <groupId>org.sonatype.oss</groupId>
+      <artifactId>oss-parent</artifactId>
+      <version>4</version>
+  </parent>
   <groupId>org.jclouds</groupId>
+  <artifactId>jclouds-chef-pom</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>chef project</name>
-  <description>JClouds Sample for Google App Engine</description>
+  <name>JClouds Chef :: Parent POM</name>
+  <description>JClouds Chef Parent POM for Maven configuration</description>
 
   <properties>
-    <!--
-       note you must set the property ${appengine.home} to a valid
-       extraction of appengine-java-sdk
-     -->
+    <jclouds.version>1.0-SNAPSHOT</jclouds.version>
     <maven.compile.source>1.6</maven.compile.source>
     <maven.compile.target>1.6</maven.compile.target>
-    <jclouds.version>1.0-SNAPSHOT</jclouds.version>
-    <jclouds.chef.identity.pem>${user.home}/.chef/${jclouds.chef.identity}.pem</jclouds.chef.identity.pem>
-    <jclouds.opscodeplatform.org>YOUR_ORG</jclouds.opscodeplatform.org>
-    <jclouds.chef.endpoint>https://api.opscode.com/organizations/${jclouds.opscodeplatform.org}</jclouds.chef.endpoint>
   </properties>
 
   <repositories>
     <repository>
-      <id>jclouds-snapshots</id>
+      <id>jclouds</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
+    </repository>
+    <repository>
+      <id>clojars</id>
+      <url>http://clojars.org/repo/</url>
     </repository>
   </repositories>
 
@@ -60,85 +59,181 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>5.10</version>
+      <version>5.14.9</version>
       <scope>test</scope>
-      <classifier>jdk15</classifier>
     </dependency>
   </dependencies>
+
   <build>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <encoding>${sourceEncoding}</encoding>
+          <encoding>${project.build.sourceEncoding}</encoding>
           <source>${maven.compile.source}</source>
           <target>${maven.compile.target}</target>
         </configuration>
       </plugin>
-
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/*LiveTest.java</exclude>
-          </excludes>
-        </configuration>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <executions>
+              <execution>
+                  <id>integration</id>
+                  <phase>integration-test</phase>
+                  <goals>
+                      <goal>test</goal>
+                  </goals>
+                  <configuration>
+                      <argLine>-Xmx512m -Xms256m -Djava.awt.headless=true -XX:MaxPermSize=256m -Xss256k</argLine>
+                      <parallel>tests</parallel>
+                      <threadCount>5</threadCount>
+                      <groups>integration</groups>
+                      <excludedGroups>unit,performance,live</excludedGroups>
+                      <properties>
+                          <property>
+                              <name>suitename</name>
+                              <value>Integration Tests</value>
+                          </property>
+                      </properties>
+                  </configuration>
+              </execution>
+          </executions>
+          <configuration>
+              <parallel>methods</parallel>
+              <threadCount>5</threadCount>
+              <groups>unit,performance</groups>
+              <excludedGroups>integration,live</excludedGroups>
+              <properties>
+                  <property>
+                      <name>suitename</name>
+                      <value>Unit and Performance Tests</value>
+                  </property>
+                  <property>
+                      <name>listener</name>
+                      <value>${jclouds.test.listener}</value>
+                  </property>
+              </properties>
+              <systemProperties>
+                <property>
+                  <name>test.initializer</name>
+                  <value>${test.initializer}</value>
+                </property>
+                <property>
+                  <name>jclouds.wire.httpstream.url</name>
+                  <value>${jclouds.wire.httpstream.url}</value>
+                </property>
+                <property>
+                  <name>jclouds.wire.httpstream.md5</name>
+                  <value>${jclouds.wire.httpstream.md5}</value>
+                </property>
+                <property>
+                  <name>jclouds.blobstore.httpstream.url</name>
+                  <value>${jclouds.blobstore.httpstream.url}</value>
+                </property>
+                <property>
+                  <name>jclouds.blobstore.httpstream.md5</name>
+                  <value>${jclouds.blobstore.httpstream.md5}</value>
+                </property>
+              </systemProperties>
+          </configuration>
       </plugin>
     </plugins>
-  </build>
 
-  <profiles>
-    <profile>
-      <id>live</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>integration</id>
-                <phase>integration-test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <excludes>
-                    <exclude>none</exclude>
-                  </excludes>
-                  <includes>
-                    <include>**/*LiveTest.java</include>
-                  </includes>
-                  <systemProperties>
-                    <property>
-                      <name>jclouds.chef.identity</name>
-                      <value>${jclouds.chef.identity}</value>
-                    </property>
-                    <property>
-                      <name>jclouds.chef.identity.pem</name>
-                      <value>${jclouds.chef.identity.pem}</value>
-                    </property>
-                    <property>
-                      <name>jclouds.chef.endpoint</name>
-                      <value>${jclouds.chef.endpoint}</value>
-                    </property>
-                    <property>
-                      <name>jclouds.chef.validator</name>
-                      <value>${jclouds.chef.validator}</value>
-                    </property>
-                    <property>
-                      <name>jclouds.chef.validator.pem</name>
-                      <value>${jclouds.chef.validator.pem}</value>
-                    </property>
-                  </systemProperties>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+  </build>
+    <profiles>
+        <profile>
+            <id>live</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>integration</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <groups>live,integration</groups>
+                                    <excludedGroups>unit,performance</excludedGroups>
+                                    <properties>
+                                        <property>
+                                            <name>suitename</name>
+                                            <value>Live Integration Tests</value>
+                                        </property>
+                                    </properties>
+                                    <systemProperties>
+                                        <!--
+                                              If you're behind a proxy, set this here
+                                              http://java.sun.com/javase/6/docs/technotes/guides/net/proxies.html
+
+                                              <property>
+                                                 <name>https.proxyHost</name>
+                                                 <value>proxy</value>
+                                              </property>
+                                              <property>
+                                                 <name>https.proxyPort</name>
+                                                 <value>port</value>
+                                              </property>
+                                              <property>
+                                                 <name>https.noProxyHosts</name>
+                                                 <value>localhost|10.150.4.49</value>
+                                              </property>
+                                        -->
+                                        <property>
+                                            <name>file.encoding</name>
+                                            <value>${project.build.sourceEncoding}</value>
+                                        </property>
+                                        <property>
+                                            <name>test.initializer</name>
+                                            <value>${test.initializer}</value>
+                                        </property>
+                                        <property>
+                                            <name>test.ssh.keyfile</name>
+                                            <value>${test.ssh.keyfile}</value>
+                                        </property>
+                                        <property>
+                                            <name>jclouds.blobstore.httpstream.url</name>
+                                            <value>${jclouds.blobstore.httpstream.url}</value>
+                                        </property>
+                                        <property>
+                                            <name>jclouds.blobstore.httpstream.md5</name>
+                                            <value>${jclouds.blobstore.httpstream.md5}</value>
+                                        </property>
+                                        <property>
+                                            <name>jclouds.wire.httpstream.url</name>
+                                            <value>${jclouds.wire.httpstream.url}</value>
+                                        </property>
+                                        <property>
+                                            <name>jclouds.wire.httpstream.md5</name>
+                                            <value>${jclouds.wire.httpstream.md5}</value>
+                                        </property>
+                                    </systemProperties>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
